# libmarias3

./: .gitignore  .readthedocs.yaml  Makefile.am  README.md  README.rst  configure.ac  libmarias3.pc.in  version.h.in
.github/workflows/: asan.yml  distcheck.yml  docs.yml  scanbuild.yml  usan.yml
ci-scripts/: asan.sh  cppcheck.sh  distcheck.sh  docs.sh  lsan.supp  scanbuild.sh  tsan.sh  usan.sh  valgrind.sh
debian/: changelog  control  copyright  libmarias3-dev.install  libmarias3.install
docs/: conf.py  index.rst
docs/api/: compiling.rst  errors.rst  functions.rst  types.rst
docs/appendix/: credits.rst  version_history.rst
docs/contributors/: coding_standards.rst  docs.rst  github.rst  introduction.rst  test_cases.rst
docs/introduction/: compiling.rst  license.rst  whatis.rst
extra/: astyle.sh
libmarias3/: include.am  marias3.h  visibility.h
m4/: ax_curl_openssl_unsafe.m4  ax_debug.m4  ax_harden_compiler_flags.m4  ax_libmhash.m4
rpm/: libmarias3.spec.in
src/: assume_role.c  assume_role.h  common.h  debug.c  debug.h  error.c  error.h  include.am  marias3.c  memory.h  request.c  request.h  response.c  response.h  sha256-internal.c  sha256.c  sha256.h  sha256_i.h  structs.h  xml.c  xml.h
tests/: basic.c  basic_host.c  basic_no_type.c  basic_thread.c  content_type.c  copy.c  custom_malloc.c  error.c  include.am  large_file.c  list.c  longlist.c  prefix.c  read_cb.c  small_buffer.c  snowman.c
yatl/: lite.h
